syntax = "proto3";

package flowcraft_proto.v1;

import "google/protobuf/struct.proto";

enum ActionExecutionStrategy {
  EXECUTION_IMMEDIATE = 0;
  EXECUTION_BACKGROUND = 1;
  EXECUTION_STREAMING = 2;
}

message ActionTemplate {
  string id = 1;
  string label = 2;
  repeated string path = 3;
  ActionExecutionStrategy strategy = 4;
  google.protobuf.Struct params_schema = 5; // JSON Schema for required inputs
}

message ActionDiscoveryRequest {
  string node_id = 1;
  repeated string selected_node_ids = 2;
}

message ActionDiscoveryResponse {
  repeated ActionTemplate actions = 1;
}

import "flowcraft/v1/actions/prompt_gen.proto";
import "flowcraft/v1/actions/node_transform.proto";
import "flowcraft/v1/actions/image_enhance.proto";
import "flowcraft/v1/actions/chat_actions.proto";

message ActionExecutionRequest {
  string action_id = 1;
  string source_node_id = 2;
  repeated string context_node_ids = 3;
  
  // Strong-typed parameters
  oneof params {
    google.protobuf.Struct params_struct = 10; // Fallback for dynamic/unmapped actions
    
    // AI Related
    PromptGenParams prompt_gen = 20;
    NodeTransformParams transform = 21;
    ImageEnhanceParams enhance = 22;
    ChatActionParams chat_generate = 23;
    ChatSyncBranchParams chat_sync = 24;
  }
}
