syntax = "proto3";

package flowcraft_proto.v1;

import "google/protobuf/struct.proto";
import "flowcraft/v1/core/base.proto";
import "flowcraft/v1/core/node.proto";
import "flowcraft/v1/core/signals.proto";
import "flowcraft/v1/core/action.proto";

message FlowMessage {
  string message_id = 1;
  int64 timestamp = 2;

  oneof payload {
    SyncRequest sync_request = 10;
    // bytes yjs_update = 11; // Removed
    UpdateNodeRequest node_update = 12;
    UpdateWidgetRequest widget_update = 13;
    ActionExecutionRequest action_execute = 14;
    ActionDiscoveryRequest action_discovery = 17;
    TaskCancelRequest task_cancel = 15;
    ViewportUpdate viewport_update = 16;
    WidgetSignal widget_signal = 18;
    NodeSignal node_signal = 27;
    TemplateDiscoveryRequest template_discovery = 19;
    InferenceConfigDiscoveryRequest inference_discovery = 28;

    GraphSnapshot snapshot = 20;
    MutationList mutations = 21;
    ActionDiscoveryResponse actions = 25;
    TemplateDiscoveryResponse templates = 26;
    InferenceConfigDiscoveryResponse inference_config = 29;
    TaskUpdate task_update = 22;
    ClearChatHistoryRequest chat_clear = 30;
    NodeEvent node_event = 23; // REPLACES StreamChunk
    ErrorResponse error = 24;
  }
}

/**
 * NodeEvent - A logical channel event for a specific node.
 */
message NodeEvent {
  string node_id = 1;
  oneof payload {
    // Chat Stream
    ChatStreamEvent chat_stream = 10;
    // Generic Log/Console
    LogEvent log = 11;
    // Task Progress
    NodeProgress progress = 12;
    // Widget Data Stream (REPLACES StreamChunk)
    WidgetStreamEvent widget_stream = 13;
    // Generic Data for custom extensions
    bytes data = 14;
  }
}

message WidgetStreamEvent {
  string widget_id = 1;
  string chunk_data = 2;
  bool is_done = 3;
}

message ChatStreamEvent {
  string chunk_data = 1;
  bool is_done = 2;
  string message_id = 3; // Link to specific message instance
}

message LogEvent {
  string message = 1;
  LogLevel level = 2;
}

enum LogLevel {
  INFO = 0;
  WARN = 1;
  ERROR = 2;
  DEBUG = 3;
}

message NodeProgress {
  float percentage = 1;
  string status_text = 2;
}

message SyncRequest { 
  string graph_id = 1;
  oneof filter {
    Rect target_area = 2;        // Area-based partial sync
    NodeIdList node_ids = 3;      // ID-based partial sync
    HierarchyFilter hierarchy = 4; // Hierarchy-based partial sync
  }
  bool subscribe_to_updates = 5;
}

message NodeIdList {
  repeated string ids = 1;
}

message HierarchyFilter {
  string root_node_id = 1;
  int32 depth = 2; // -1 for infinite
}

message TemplateDiscoveryRequest {}
message TemplateDiscoveryResponse {
  repeated NodeTemplate templates = 1;
}

message UpdateNodeRequest {
  string node_id = 1;
  NodeData data = 2;
  Presentation presentation = 3;
}

message UpdateWidgetRequest {
  string node_id = 1;
  string widget_id = 2;
  google.protobuf.Value value = 3;
}

message ViewportUpdate {
  Viewport viewport = 1;
  Rect visible_bounds = 2;
}

message MutationList {
  repeated GraphMutation mutations = 1;
  int64 sequence_number = 2;
  MutationSource source = 3;
}

message GetHistoryRequest {
  string graph_id = 1;
  int64 from_seq = 2;
  int64 to_seq = 3;
}

message HistoryResponse {
  repeated MutationLogEntry entries = 1;
}

message MutationLogEntry {
  int64 seq = 1;
  GraphMutation mutation = 2;
  int64 timestamp = 3;
  MutationSource source = 4;
  string description = 5;
  string user_id = 6;
}

message RollbackRequest {
  string graph_id = 1;
  int64 target_seq = 2; // The sequence number to roll back to
}

import "flowcraft/v1/actions/chat_actions.proto";

message GetChatHistoryRequest {
  string head_id = 1;
}

message ChatHistoryResponse {
  repeated ChatMessage entries = 1;
}

message ChatMessage {
  string id = 1;
  string role = 2;
  repeated ChatMessagePart parts = 3;
  oneof metadata {
    google.protobuf.Struct metadata_struct = 4;
    ChatMsgMetadata chat_metadata = 5;
  }
  int64 timestamp = 6;
  string parent_id = 7;
  repeated string sibling_ids = 8;
  string tree_id = 9;
}

message ClearChatHistoryRequest {
  string node_id = 1;
}

message ChatMsgMetadata {
  string model_id = 1;
  repeated string attachment_urls = 2;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
}

message GraphSnapshot {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
  int64 version = 3;
}

message GraphMutation {
  string origin_task_id = 1; // 溯源：哪个任务产生的变更
  oneof operation {
    AddNode add_node = 2;
    UpdateNode update_node = 3;
    RemoveNode remove_node = 4;
    AddEdge add_edge = 5;
    RemoveEdge remove_edge = 6;
    ClearGraph clear_graph = 7;
    PathUpdate path_update = 8;
  }
}

message AddNode { Node node = 1; }
message UpdateNode {
  string id = 1;
  NodeData data = 2;
  Presentation presentation = 3;
}
message RemoveNode { string id = 1; }
message AddEdge { Edge edge = 1; }
message RemoveEdge { string id = 1; }
message AddSubGraph { repeated Node nodes = 1; repeated Edge edges = 2; }
message ClearGraph {}

message PathUpdate {
  string target_id = 1; // Node ID or Edge ID
  string path = 2;      // e.g., "data.widgets.my_slider.value"
  google.protobuf.Value value = 3; // The new value
  enum UpdateType {
    REPLACE = 0;
    MERGE = 1;
    DELETE = 2;
  }
  UpdateType type = 4;
}

message TaskCancelRequest { string task_id = 1; }

message InferenceConfigDiscoveryRequest {}

message InferenceConfigDiscoveryResponse {
  repeated InferenceEndpointSummary endpoints = 1;
  string default_endpoint_id = 2;
  string default_model = 3;
}

message InferenceEndpointSummary {
  string id = 1;
  string name = 2;
  repeated string models = 3;
}

service FlowService {
  // Establish a stream for graph updates
  rpc WatchGraph(SyncRequest) returns (stream FlowMessage);

  // Apply a list of mutations
  rpc ApplyMutations(MutationList) returns (ErrorResponse);

  // Simple RPCs for direct updates
  rpc UpdateNode(UpdateNodeRequest) returns (ErrorResponse);
  rpc UpdateWidget(UpdateWidgetRequest) returns (ErrorResponse);
  rpc SendWidgetSignal(WidgetSignal) returns (ErrorResponse);
  rpc SendNodeSignal(NodeSignal) returns (ErrorResponse);

  // Execution and Discovery
  rpc ExecuteAction(ActionExecutionRequest) returns (ErrorResponse);
  rpc DiscoverActions(ActionDiscoveryRequest) returns (ActionDiscoveryResponse);
  rpc DiscoverTemplates(TemplateDiscoveryRequest) returns (TemplateDiscoveryResponse);
  rpc DiscoverInferenceConfig(InferenceConfigDiscoveryRequest) returns (InferenceConfigDiscoveryResponse);

  // Control
  rpc CancelTask(TaskCancelRequest) returns (ErrorResponse);
  rpc UpdateViewport(ViewportUpdate) returns (ErrorResponse);

  // History & Replay
  rpc GetHistory(GetHistoryRequest) returns (HistoryResponse);
  rpc Rollback(RollbackRequest) returns (ErrorResponse);
  rpc GetChatHistory(GetChatHistoryRequest) returns (ChatHistoryResponse);
  rpc ClearChatHistory(ClearChatHistoryRequest) returns (ErrorResponse);
}
